# NatankajSI

./: .gitignore
.claude/: settings.local.json
app/: README.md  pubspec.yaml
app/.claude/: CLAUDE.md  settings.local.json
app/.github/: copilot-instructions.md
app/android/app/: build.gradle.kts
app/ios/Runner/: Info.plist
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: main.dart
app/lib/data/: data.dart
app/lib/data/models/: app_boot_data.model.dart  fetch_log.model.dart  franchise.model.dart  fuel_type.model.dart  http_validation_error.model.dart  latest_price_entry.model.dart  models.dart  mol_card.model.dart  mol_data.model.dart  mol_gastro_category.model.dart  mol_service.model.dart  (+7 more)
app/lib/extensions/: string.extension.dart
app/lib/styles/: app_colors.dart  app_gradients.dart  app_theme.dart  app_typography.dart  fuel_card_palette.dart  styles.dart
app/test/: widget_test.dart
goriva-parser/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
goriva-parser/.claude/: settings.local.json
goriva-parser/alembic/: env.py
goriva-parser/alembic/versions/: 56ac57a55b24_initial_schema.py  a2b3c4d5e6f7_mol_tables.py  b3c4d5e6f7a8_add_regulated_price.py
goriva-parser/app/: config.py  database.py  main.py  scheduler.py
goriva-parser/app/api/v1/: fetch_log.py  franchises.py  fuels.py  helpers.py  prices.py  regulated_prices.py  router.py  stations.py
goriva-parser/app/fetcher/: client.py  ingest.py  mol_ingest.py  regulated_prices_ingest.py
goriva-parser/app/models/: orm.py  schemas.py
(+62 files in other folders)
